# disintea-server

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  nginx.conf
certs/: cert.pem  key.pem
data/: disintea.db
deploy/: deploy.sh  disintea-server.service  dismony-server.service  gen-self-signed.sh  nginx-disintea.conf  nginx-dismony.conf  setup-coturn.sh  start.sh
scripts/: deploy-web.sh
src/: main.rs  messages.rs  rooms.rs
web-dist/: index.html
web-dist/assets/: index-0Ybq7wI1.css  index-B1PQg4bD.js  index-DPtfO7IX.js  index-uJwMWvvw.js
