[package]
name = "disintea-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "disintea-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
futures-util = "0.3"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
